fix: 字体路径错误

--- a/src/components/Leaderboard/fonts.module.css
+++ b/src/components/Leaderboard/fonts.module.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Outfit;
-  src: url("@/assets/Outfit-VariableFont_wght.ttf") format("truetype");
+  src: url("../../assets/Outfit-VariableFont_wght.ttf") format("truetype");
 }
 
 .OutfitBold {
