--- a/src/components/FullScreenLoading/FullScreenLoading.module.css
+++ b/src/components/FullScreenLoading/FullScreenLoading.module.css
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--foreground);
+  opacity: 0.6;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,7 +25,7 @@
 
 .loadingText {
   font-size: 1.2rem;
-  color: #333;
+  color: var(--background);
 }
 
 @keyframes spin {
