--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+html,body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
