--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,16 +113,29 @@
   --sidebar-ring: oklch(0.553 0.013 58.071);
 }
 
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
 
-html,body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
