fix: 未在文档库注册账号的用户无法打开个人资料编辑页面 (IDX-21)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,10 +77,15 @@
   --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
   --sidebar-border: oklch(0.923 0.003 48.717);
   --sidebar-ring: oklch(0.709 0.01 56.259);
+  --bg-1: #FFFFFF;
+  --bg-2: #EDEEEF;
+  --bg-3: #DCDFE1;
+  --bg-4: #CBCFD3;
+  --bg-5: #BDC1C6;
 }
 
 .dark {
-  --background: oklch(0.147 0.004 49.25);
+  --background: oklch(0.191 0.003 247.962);
   --foreground: oklch(0.985 0.001 106.423);
   --card: oklch(0.216 0.006 56.043);
   --card-foreground: oklch(0.985 0.001 106.423);
@@ -111,6 +116,11 @@
   --sidebar-accent-foreground: oklch(0.985 0.001 106.423);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.553 0.013 58.071);
+  --bg-1: #131415;
+  --bg-2: #161718;
+  --bg-3: #202122;
+  --bg-4: #272727;
+  --bg-5: #313131;
 }
 
 @layer utilities {
